# Laba_4.4

./: .pre-commit-config.yaml  .python-version  README.md  environment  idz1.py  idz2.py  primer1.py  pyproject.toml
src/: idz1.py  idz2.py  primer1.py  task_1.py  task_2.py  test_idz2.py
tests/: test_idz1.py  test_idz2.py  test_primer1.py  test_task_1.py  test_task_2.py
